Qualification 메뉴 및 페이지 추가 - 학력, 자격증, 전문성 개발 섹션 구성

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -20,6 +20,9 @@ main:
   - title: "Research"
     url: /talks/    
 
+  - title: "Qualification"
+    url: /qualification/
+
   - title: "Portfolio"
     url: /portfolio/
         
