--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "경영학박사과정 | 정보관리전공 | 직업교육학 전문가"
   location         : "Seoul, Korea"
-  employer         : "서울벤처대학원대학교"
+  employer         : "경기대학교 일반대학원, 서울벤처대학원대학교"
   uri              : # URL
   email            : # 실제 이메일 주소로 업데이트 필요 
 
