Update profile bio to 한국직업능력개발센터장

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "profile.png"
   name             : "이애본"
   pronouns         : # example: "she/her"  
-  bio              : "경영학박사과정 | 정보관리전공 | 직업교육학 전문가"
+  bio              : "한국직업능력개발센터장"
   location         : "Seoul, Korea"
   employer         : "경기대학교 일반대학원"
   uri              : # URL
